# Goonch

./: .gitignore  CMakeLists.txt  main.cpp  main2.cpp  readme.md
include/: common.hpp  main_loop.hpp  math.hpp  shape.hpp  window.hpp
src/: math.cpp  shape.cpp  window.cpp
